fixes like overflow not hidden for rootcontainer

--- a/includes/ecologylab.css
+++ b/includes/ecologylab.css
@@ -44,7 +44,6 @@ div.rootcontainer
   
   margin-right: auto;
   margin-left: auto;
-  overflow: hidden;
 
   padding: 0px var(--margin-right) 0 var(--margin-right);
 
